# slackproxy

./: .gitignore  Makefile  README.md  requirements.txt  setup.cfg
certs/: server.pem
etc/: config.json  nginx-slackproxy.conf  supervisor-slackproxy.conf
lib/slackproxy/: __init__.py  app.py
lib/slackproxy/test/: run_tests.py  test_app.py
