[metadata]
name = slackproxy
version = 1.0.0
author = cezmunsta
author_email = python@incoming-email.co.uk
description = Proxy service for Slack
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cezmunsta/slackproxy
project_urls =
    Bug Tracker = https://github.com/cezmunsta/slackproxy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License V3 (GPLv3)
    Operating System :: OS Independent

[options]
install_requires =
    attrs==20.2.0
    Automat==20.2.0
    cffi==1.14.2
    constantly==15.1.0
    cryptography==3.1
    hyperlink==20.0.1
    idna==2.10
    incremental==17.5.0
    pyasn1==0.4.8
    pyasn1-modules==0.2.8
    pycparser==2.20
    PyHamcrest==2.0.2
    PyYAML==5.4.1
    pyOpenSSL==19.1.0
    service-identity==18.1.0
    Twisted==20.3.0
    zope.interface==5.1.0
package_dir =
    = lib
packages = find:
python_requires = >=3.6

[options.packages.find]
where = lib
include =
    slackproxy
    slackproxy.test
exclude = additional
